--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
 #grid {
-    display: flex;
-    flex-wrap: wrap;
-        
-  }
+  display: flex;
+  flex-wrap: wrap;
+  width: 400px;
+  height: 400px;
+  margin: 20px auto;
+}
 
-  .container{
-    text-align: center;
-  }
-  
-  .square {
-    width: 50px;
-    height: 50px;
-    background-color: lightgray;
-    border: 1px solid black;
-    text-align: center;
-    font-size: 20px;
-    line-height: 50px;
-  }
-  
-  .clicked {
-    background-color: red;
-  }
-  
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: lightgray;
+  border: 1px solid gray;
+  font-size: 20px;
+}
+
+.clicked {
+  background-color: blue;
+}
+
+.bomb {
+  background-color: red;
+}
